KFSPTS-35513 add changes to overlays and extensions